--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-hateoas'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.hibernate.validator:hibernate-validator:8.0.0.Final'
 	testImplementation 'org.glassfish:jakarta.el:4.0.2'
 	implementation 'org.modelmapper:modelmapper:3.1.0'
